<resources>
    <string name="app_name">Lego Digital Sonoro 2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="play">Gioca!</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="setting_no_pages_title">Numero di schermate</string>
    <string name="setting_no_pages_key">setting_key_no_pages</string>
    <string name="setting_email_key">setting_key_no_email</string>
    <string name="setting_no_pages_summary">Numero delle schermate che compongono una partita</string>
    <string name="setting_no_syllables_title">Numero di sillabe</string>
    <string name="setting_no_syllables_key">setting_no_syllables_key</string>
    <string name="setting_no_syllables_summary">Numero delle sillabe presenti in una schermata</string>
    <string name="label_two_syllables">Due sillabe</string>
    <string name="label_four_syllables">Quattro sillabe</string>
    <string name="message_end">Partita Terminata!</string>
    <string name="message_congratulations">Complimenti!</string>
    <string name="no_tts_message">No TTS support</string>
    <string name="pref_title_game">Impostazioni di gioco</string>
    <string name="pref_title_data_collect">Raccolta dati</string>
    <string name="setting_email_title">Email</string>
    <string name="mail_not_valid_message">email non valida!</string>
    <string name="setting_collect_key">setting_collect_key</string>
    <string name="setting_collect_title">Invio dati</string>
    <string name="setting_collect_summary">Se selezionatao verranno inviate email contenenti i dati delle partite.</string>
    <string name="setting_collect_summary_off">I dati non verranno inviati</string>
    <string name="setting_collect_summary_on">I dati verrano inviati alla mail indicata</string>
    <string name="no_email_snackbar">Prima impostare un\'email</string>
    <string name="play_multi">Multiplayer</string>
    <string name="page_completed_message">Complimenti, hai trovato tutte le parole!</string>
    <string name="exit_dialog_message">Se esci tutti i progressi andranno persi!</string>
    <string name="exit_dialog_title">Termina partita</string>
    <string name="settings_text">Settings</string>
    <string name="title_other_devices">Nuovi Giocatori</string>
    <string name="title_paired_devices">Giocatori passati</string>
    <string name="none_paired">Nessun dispositivo è stato accoppiato</string>
    <string name="scanning">Ricerca...</string>
    <string name="none_found">Nessun dispositivo trovato</string>
    <string name="select_device">Scegliere un dispositivo</string>
    <string name="bt_not_enabled">Il Bluetooth non è stato abilitato</string>
    <string name="new_game_multi">Inizia una partita</string>
    <string name="join_game_multi">Unisciti a una partita</string>
    <string name="button_scan">Cerca dispositivi</string>
    <string name="button_discoverable">Rendi visualizzabile</string>
    <string name="new_game_multi_dialog_title">Nuova partita multigiocatore</string>
    <string name="new_game_multi_message">Inizia una nuova partita o aspetta che sia qualcun altro a farlo!</string>
    <string name="cancel">Annulla</string>
    <string name="bluetooth_conn_def">Non connesso</string>
    <string name="bluetooth_listening">In ascolto</string>
    <string name="bluetooth_connecting">Connessione in corso...</string>
    <string name="bluetooth_connected">Connesso</string>
    <string name="error_connection_msg">Impossibile connettersi al dispositivo</string>
    <string name="lost_connection_msg">Connessione persa</string>
    <string name="wait_turn">Aspetta il tuo turno!</string>
    <string name="setting_device_id">setting_device_id</string>
    <string name="pref_title_info">Informazioni</string>


</resources>
