<RelativeLayout
    android:id="@+id/ct"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/play_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.gbresciani.poligame.activities.PlayActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/play_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="75dp"/>

    <LinearLayout
        android:id="@+id/play_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:text="@string/play"/>

        <Button
            android:id="@+id/play_multi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_multi"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/db_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Settings"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

</RelativeLayout>
