<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/home_bg"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_settings_horizontal_margin"
              android:paddingRight="@dimen/activity_settings_horizontal_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/paired_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/title_paired_devices"
            android:textSize="35sp"/>


        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="0dp"
            android:stackFromBottom="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/discovery_layout"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/title_other_devices"
            android:textSize="35sp"/>

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/add_discovery_layout"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/button_scan"
            android:layout_width="@dimen/play_buttons_dimen"
            android:layout_height="@dimen/play_buttons_dimen"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/add_player_selector"
            android:text="@string/button_scan"/>

    </LinearLayout>

</LinearLayout>
